# prelegal

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
backend/: auth.py  chat.py  database.py  main.py  pyproject.toml  render.py  test_chat.py  test_main.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
scripts/: start-linux.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: BAA.md  CSA.md  DPA.md  LICENSE.txt  Mutual-NDA-coverpage.md  Mutual-NDA.md  Partnership-Agreement.md  Pilot-Agreement.md  Software-License-Agreement.md  design-partner-agreement.md  psa.md  sla.md
